--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dev_events">
+    package="com.makeanddevelop.dev_events">
    <application
         android:label="dev_events"
         android:name="${applicationName}"
