--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -15,6 +15,7 @@ analyzer:
     - "**/*.mocks.dart"
     - "**/*.freezed.dart"
     - "**/ioc.config.dart"
+    - "**/generated/*.dart"
   errors:
     invalid_annotation_target: ignore
 
