--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,14 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  intl: any
+  provider: ^6.0.5
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   json_annotation: ^4.8.1
-  intl: any
+
 
 dev_dependencies:
   flutter_test:
