--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   json_annotation: ^4.8.1
   http: ^0.13.6
   go_router: ^7.0.0
-
+  supabase_flutter: ^1.9.0
 
 dev_dependencies:
   flutter_test:
